# alt_compare

./: .gitignore  README.md  main.py  pyproject.toml  sisyphus.py  test.py
compare_module/: __init__.py  compare.py
