[project]
name = "sisyphus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click==8.2.1",
    "packaging>=25.0",
    "polars>=1.32.3",
    "requests>=2.32.5",
]

[tool.ruff]
#line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Found commented-out code
#    "ERA001",
]
